--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "echarts": "^4.0.4",
     "fastclick": "^1.0.6",
     "mint-ui": "^2.2.13",
     "vue": "^2.5.2",
